--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
   font-family: "Rouge Script", cursive;
   font-weight: 400;
   font-style: normal;
+  font-size: 40px; /*ИСПРАВЛЕНИЕ*/
 }
 
 .navigation nav {
@@ -33,9 +34,9 @@ body{
 
 .navigation a {
   color: black; 
-  font-size: 18px;
+  font-size: 20px; /*ИСПРАВЛЕНИЕ*/
   font-weight:700;
-  padding: 8px 0;
+  padding: 12px 0;
   text-decoration: none;
 }
   
@@ -54,6 +55,10 @@ body{
   height: auto; /* Сохраняет пропорции */
   border-radius: 15px;
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+}
+
+section h2 {
+  font-size: 30px; /*ИСПРАВЛЕНИЕ*/
 }
 .about{
     text-align: justify;
@@ -146,6 +151,8 @@ footer{
   
   .about, .advantages {
     width: 100%; /*ширина блоков на всю доступную ширину*/
+    font-size: 16px;
+    line-height: 1.5;
   }
   
   .contacts {
@@ -178,14 +185,14 @@ footer{
   }
   
   table {
-    font-size: 18px; /* уменьшение шрифта таблицы на 2px (20px - 2px) */
+    font-size: 16px; /* уменьшение шрифта таблицы на 2px (20px - 2px) */
   }
 }
 
 /* ≤400px */
 @media (max-width: 400px) {
   table {
-    font-size: 16px; /*уменьшение шрифта таблицы еще на 2px (18px - 2px) */
+    font-size: 14px; /*уменьшение шрифта таблицы еще на 2px (18px - 2px) */
   }
   
   .main_photo img {
