--- a/style_checkout.css
+++ b/style_checkout.css
@@ -4,6 +4,7 @@
   grid-template-columns: 1fr 1fr;
   gap: 40px;
   margin: 30px 0;
+  margin-top: 20px;
 }
 
 @media (max-width: 900px) {
@@ -357,4 +358,8 @@
   .dish-info-checkout h3 {
     text-align: center;
   }
+}
+main.container h1:first-of-type {
+    margin-top: 40px;
+    padding-top: 20px;
 }
